# Simple-GDExtensionCMake-Template

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt  example.cpp  example.hpp  register_types.cpp
template/: CMakeLists.txt  template.gdextension.in
templates/: CMakeLists.txt  template.debug.gdextension.in  template.release.gdextension.in
